--- a/css/index.css
+++ b/css/index.css
@@ -1,148 +1,412 @@
-
-*{
-    margin-left: 10px;
-    padding: 0;
+* {
+  margin-left: 10px;
+  padding: 0;
 }
 
-body nav{
+body nav {
+  display: flex;
+  height: 10vh;
+  width: 100vw;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.nav-items {
+  display: flex;
+  height: 5vh;
+  width: 80vw;
+  justify-content: center;
+  align-items: center;
+}
+
+.nav-item {
+  margin: 50px;
+  font-size: 25px;
+  font-family: "Poppins";
+  font-weight: 200;
+}
+.active-item {
+  color: #fe5e35;
+  font-weight: 1000;
+}
+
+.intro-section {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.left-section {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+
+  align-items: flex-start;
+}
+
+.left-section h3 {
+  display: inline;
+  font-size: 50px;
+  font-weight: 400;
+}
+.left-section h3 img {
+  display: inline;
+}
+
+.left-section h1 {
+  font-size: 5rem;
+  font-weight: 400;
+  display: inline;
+  position: relative;
+  bottom: 100px;
+}
+
+.sub-headlines {
+  position: relative;
+  bottom: 150px;
+  font-size: 25px;
+  left: 50px;
+}
+.sub-headline img {
+  background-color: #fe5e35;
+  border-radius: 20px;
+  padding: 5px;
+  position: relative;
+  top: 10px;
+  right: 10px;
+}
+
+.text {
+  position: relative;
+  bottom: 100px;
+  color: #758283;
+}
+
+.action-btns {
+  display: flex;
+  flex-direction: row;
+  position: relative;
+}
+.action-btn {
+  height: 50px;
+  width: 150px;
+  border: none;
+  border-radius: 50px;
+  background-color: #fe5e35;
+  color: #ffffff;
+  font-family: "Poppins";
+  position: relative;
+  bottom: 100px;
+}
+
+.right-section {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+}
+.discount-content {
+  position: relative;
+  top: 300px;
+  right: 10px;
+  color: #ffffff;
+}
+.discount-content h1 {
+  font-size: 50px;
+  position: relative;
+  bottom: 50px;
+  right: 10px;
+  font-family: "Poppins";
+}
+.discount-content h4 {
+  font-family: "Fredoka One" sans-serif;
+}
+
+.discount {
+  z-index: -1;
+  position: relative;
+  top: 450px;
+  right: 60px;
+}
+[alt="headphone"] {
+  position: relative;
+  bottom: 300px;
+  z-index: -3;
+}
+
+.headphone-btn {
+  position: relative;
+  bottom: 250px;
+}
+.headphone-btn-sm {
+  display: none;
+}
+
+@media screen and (max-width: 1024px) and (min-width: 786px) {
+  nav {
     display: flex;
-    height: 10vh;
+    height: 100px;
     width: 100vw;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-}
+    /* background-color: blue; */
+  }
 
-.nav-items{
+  .nav-items {
     display: flex;
     height: 5vh;
     width: 80vw;
     justify-content: center;
     align-items: center;
-}
+  }
 
-.nav-item{
-    margin: 50px;
-    font-size: 25px;
-    font-family: 'Poppins';
+  .nav-item {
+    margin: 25px;
+    font-size: 1rem;
+    font-family: "Poppins";
     font-weight: 200;
-}
-.active-item{
-    color: #fe5e35;
-    font-weight: 1000;
-}
+  }
+  [alt="actions"] {
+    width: 200px;
+    margin-right: 50px;
+  }
 
-.intro-section{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-
-.left-section{
+  .right-section {
     display: flex;
     flex: 1;
     flex-direction: column;
+    justify-content: start;
+    align-items: center;
+  }
+  .discount-content {
+    position: relative;
+    top: 160px;
+    right: 13px;
+    color: #fff;
+  }
+  .discount-content h1 {
+    font-size: 1rem;
+    position: relative;
+    bottom: 10px;
+    left: 20px;
+  }
+  .discount-content h4 {
+    font-family: "Fredoka One" sans-serif;
+    font-size: 0.8rem;
+  }
 
-    align-items: flex-start;
-}
+  .discount {
+    z-index: -1;
+    position: relative;
+    top: 250px;
+    right: 20px;
+    height: 100px;
+  }
+  [alt="headphone"] {
+    position: relative;
+    bottom: 250px;
+    height: 400px;
+    z-index: -3;
+  }
 
-.left-section h3{
+  .headphone-btn {
+    position: relative;
+    bottom: 250px;
+  }
+
+  .left-section h3 {
     display: inline;
     font-size: 50px;
     font-weight: 400;
-}
-.left-section h3 img{
+  }
+  .left-section h3 img {
     display: inline;
-}
+  }
 
-.left-section h1{
-    font-size: 5rem;
+  .left-section h1 {
+    font-size: 4rem;
     font-weight: 400;
     display: inline;
     position: relative;
     bottom: 100px;
-}
+  }
 
-.sub-headlines{
+  .sub-headlines {
     position: relative;
     bottom: 150px;
     font-size: 25px;
     left: 50px;
-    
-
-}
-.sub-headline img{
+  }
+  .sub-headline img {
     background-color: #fe5e35;
     border-radius: 20px;
     padding: 5px;
     position: relative;
     top: 10px;
     right: 10px;
-}
+  }
 
-.text{
+  .text {
     position: relative;
     bottom: 100px;
     color: #758283;
+  }
+  .headphone-btn-sm {
+    display: none;
+  }
 }
 
-.action-btns{
+@media screen and (max-width: 786px) {
+  * {
+    margin-left: 0px;
+    margin: 0;
+    padding: 0;
+  }
+  body nav {
     display: flex;
-    flex-direction: row;
-    position: relative;
-}
-.action-btn{
-    height: 50px;
-    width: 150px;
-    border: none;
-    border-radius: 50px;
-    background-color: #fe5e35;
-    color: #FFFFFF;
+    height: 400px;
+    width: 100vw;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    /* background-color: orange; */
+  }
+
+  .nav-items {
+    display: flex;
+    height: 5vh;
+    width: 80vw;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .nav-item {
+    margin: 25px;
+    font-size: 1rem;
     font-family: "Poppins";
-position: relative;
-bottom: 100px;
-    
-}
+    font-weight: 200;
+  }
+  [alt="actions"] {
+    width: 200px;
+    margin-right: 0px;
+  }
 
-
-.right-section{
+  .right-section {
     display: flex;
     flex: 1;
     flex-direction: column;
     justify-content: start;
     align-items: center;
-
-}
-.discount-content {
-  position: relative;
-  top: 300px;
-    right:10px;
-    color: #FFFFFF;
-}
-.discount-content h1{
-    font-size: 50px;
+  }
+  .discount-content {
     position: relative;
-    bottom: 50px;
-    right: 10px;
-    font-family: "Poppins";
-}
-.discount-content h4{
-    font-family: 'Fredoka One' sans-serif;
-}
+    top: 170px;
+    right: 0px;
+    color: #fff;
+  }
+  .discount-content h1 {
+    font-size: 1rem;
+    position: relative;
+    bottom: 0px;
+    left: 20px;
+  }
+  .discount-content h4 {
+    font-family: "Fredoka One" sans-serif;
+    font-size: 0.8rem;
+  }
 
-.discount{
+  .discount {
     z-index: -1;
     position: relative;
-    top: 450px;
-    right:60px;
-}
-[alt="headphone"]{
+    top: 250px;
+    right: 20px;
+    height: 100px;
+  }
+  [alt="headphone"] {
     position: relative;
-    bottom: 300px;
+    top: -100px;
+    height: 300px;
     z-index: -3;
+  }
+
+  .headphone-btn {
+    display: none;
+  }
+  .headphone-btn-sm {
+    display: block;
+    height: 40px;
+    width: 130px;
+    border: none;
+    border-radius: 50px;
+    background-color: #fe5e35;
+    color: #ffffff;
+    font-family: "Poppins";
+    position: relative;
+    bottom: 100px;
+  }
+  .action-btn {
+    height: 40px;
+    width: 130px;
+    border: none;
+    border-radius: 50px;
+    background-color: #fe5e35;
+    color: #ffffff;
+    font-family: "Poppins";
+    position: relative;
+    bottom: -200px;
+    margin: 10px;
+  }
+
+  .left-section h3 {
+    display: inline;
+    font-size: 30px;
+    font-weight: 400;
+  }
+  .left-section h3 img {
+    display: inline;
+  }
+
+  .left-section h1 {
+    font-size: 2rem;
+    font-weight: 400;
+    display: inline;
+    position: relative;
+    bottom: -10px;
+  }
+
+  .sub-headlines {
+    position: relative;
+    bottom: -150px;
+    font-size: 15px;
+    left: 50px;
+  }
+  .sub-headline img {
+    background-color: #fe5e35;
+    border-radius: 20px;
+    padding: 5px;
+    position: relative;
+    top: 10px;
+    right: 10px;
+    height: 20px;
+  }
+
+  .text {
+    position: relative;
+    bottom: -180px;
+  }
+  .intro-section {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    height: 100vh;
+  }
+  .action-btns {
+    display: flex;
+    flex-direction: row;
+    position: relative;
+  }
 }
 
-.headphone-btn{
-    position: relative;
-    bottom: 250px;
-}
